[package]
name = "LightningNode"
version = "0.1.0"
edition = "2024"

[features]
alice = []
bob = []

[dependencies]
ldk-node = "0.4.0"
bitcoin= "0.32.5"
lightning-liquidity = "=0.1.0-alpha.6"
lightning = { version = "0.0.125", features = ["std"] }
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }